unpackaged/main/default/objects/ContactBridgeAPI__x/ContactBridgeAPI__x.object-meta.xml
<CustomObject>
    <description>bz_dp_cntct_brdg_api</description>
    <externalDataSource>EDS</externalDataSource>
    <externalName>bz_dp_cntct_brdg_api</externalName>
    <label>ContactBridgeAPI</label>
    <pluralLabel>ContactBridgeAPI</pluralLabel>
</CustomObject>