unpackaged/main/default/objects/ContactBridgeAPI__x/fields/guid__c.field-meta.xml
<CustomField>
    <fullName>guid__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>guid</description>
    <externalDeveloperName>guid</externalDeveloperName>
    <label>guid</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>ContactBridgeAPI</relationshipLabel>
    <relationshipName>ContactBridgeAPI</relationshipName>
    <type>Lookup</type>
</CustomField>