unpackaged/main/default/objects/ContactBridgeAPI__x/fields/internal_id__c.field-meta.xml
<CustomField>
    <fullName>internal_id__c</fullName>
    <description>internal_id</description>
    <externalDeveloperName>internal_id</externalDeveloperName>
    <label>internal_id</label>
    <length>9</length>
    <type>Text</type>
</CustomField>