unpackaged/main/default/objects/ContactBridgeAPI__x/fields/region_id__c.field-meta.xml
<CustomField>
    <fullName>region_id__c</fullName>
    <description>region_id</description>
    <externalDeveloperName>region_id</externalDeveloperName>
    <label>region_id</label>
    <length>3</length>
    <type>Text</type>
</CustomField>